Relationship in salesforce/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <inlineHelpText>Enter a Fathers name</inlineHelpText>
        <label>Father Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Card_no__c</fullName>
        <inlineHelpText>Enter your pan card no</inlineHelpText>
        <label>Pan Card no</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>